# unigui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
backends/cli/: Cargo.toml
backends/cli/examples/: simple.rs
backends/cli/src/: lib.rs
backends/fgui-wgpu/: Cargo.toml
backends/fgui-wgpu/examples/: simple.rs
backends/fgui-wgpu/src/: shader.vert.spv
backends/wgpu/: build.rs
backends/wgpu/src/: lib.rs  shader.vert  shader.vert.spv
examples/: div.rs  flexbox.rs  simple.rs
examples/demo/: main.rs
examples/demo/unigui-classic/: Cargo.toml
examples/demo/unigui-classic/src/: button.rs
fgui/: Cargo.toml
fgui/src/: app.rs  area.rs  backend.rs  lib.rs  link.rs  prelude.rs  rect.rs  runner.rs  widget.rs
fgui/src/containers/: flexbox.rs
src/: app.rs  area.rs  lib.rs  prelude.rs  rect.rs  runner.rs  widget.rs
src/containers/: div.rs  flexbox.rs  mod.rs
src/graphics/: mod.rs  shapes.rs  texture.rs
src/graphics/ressources/: text-shader.frag  text-shader.vert  texture-shader.frag
src/graphics/shaders/: texture-shader.vert
