[package]
name = "fgui"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.25"
wgpu = "0.9"
futures = "0.3"
bytemuck = { version = "1.5", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

[dev-dependencies]
lyon = "0.17"
image = "0.23"
env_logger = "0.8"
